--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/main.css">
+
     <title>Vibes</title>
+
+    <!-- Include meta tag to ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Include jQuery Mobile stylesheets -->
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+
+    <!-- Include the jQuery library -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+    <!-- Include the jQuery Mobile library -->
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
+<!--PAGE ONE-->
+<div data-role="page" id="pageOne">
+
+    <div data-role="main" class="ui-content">
+        <h1>Stresslevel</h1>
+
+        <div id="mainCircle">
+            <p id="circleInfo">108 bpm</p>
+        </div>
+
+        <div id="stressLevel">
+            <p>----</p>
+        </div>
+    </div>
+
+    <div data-role="footer" class="footer">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#pageOne">page1</a></li>
+                <li><a href="#pageTwo" data-transition="slide">page2</a></li>
+                <li><a href="#pageThree" data-transition="slide" data-direction="reverse">page3</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!--PAGE TWO-->
+<div data-role="page" id="pageTwo">
+    <h1>Month Avarage</h1>
+    <div data-role="main" class="ui-content">
+        <div id="graph">
+            <img src="img/graph.jpg" id="graphImg">
+        </div>
+
+        <div id="advice">
+        </div>
+    </div>
+
+    <div data-role="footer" class="footer">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#pageOne" data-transition="slide" data-direction="reverse">page1</a></li>
+                <li><a href="#pageTwo">page2</a></li>
+                <li><a href="#pageThree" data-transition="slide">page3</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!--PAGE THREE-->
+<div data-role="page" id="pageThree">
+
+    <div data-role="main" class="ui-content">
+        <div id="chat">
+        </div>
+
+    </div>
+
+    <div data-role="footer" class="footer">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#pageOne" data-transition="slide">page1</a></li>
+                <li><a href="#pageTwo" data-transition="slide" data-direction="reverse">page2</a></li>
+                <li><a href="#pageThree">page3</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
