--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
 
 <!--PAGE TWO-->
 <div data-role="page" id="pageTwo">
-    <h1>Month Avarage</h1>
+    <h1>Monthly Average</h1>
     <div data-role="main" class="ui-content">
         <div id="graph">
             <img src="img/graph.jpg" id="graphImg">
         </div>
 
         <div id="advice">
+
+        </div>
+
+        <div id="recommended">
+            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
+            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
+            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
         </div>
     </div>
 
