--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div id="recommended">
-            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
+            <a href="#" class="ui-btn ui-icon-heart ui-btn-icon-notext">Heart Icon</a>
             <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
             <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext">Search</a>
         </div>
