--- a/register.html
+++ b/register.html
@@ -21,14 +21,15 @@
     </div>
     <div>
         <div id="loginfields">
-            <input type="text" placeholder="username or email">
+            <input type="text" placeholder="username">
+            <input type="text" placeholder="email">
             <input type="text" placeholder="password">
+            <input type="text" placeholder="retype password">
         </div>
         <div id="wrapper">
-        <ul class="buttons">
-            <li><a href="app.html" class="ui-btn">Login</a></li>
-            <li><a href="register.html" class="ui-btn">Register</a></li>
-        </ul>
+            <ul class="buttons">
+                <li><a href="index.html" class="ui-btn">Register account</a></li>
+            </ul>
         </div>
     </div>
 </div>
