--- a/app.html
+++ b/app.html
@@ -115,8 +115,13 @@
 <div data-role="page" id="pageThree">
 
     <div data-role="main" class="ui-content">
-        <div id="chat">
+        <div id="chatbox">
+
         </div>
+    <form name="message" action="">
+        <input name="usermsg" type="text" id="usermsg" size="63" />
+        <input name="submitmsg" type="submit"  id="submitmsg" value="Send" />
+    </form>
 
     </div>
 
