--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
         <div id="wrapper">
         <ul class="buttons">
-            <li><a href="app.html" class="ui-btn">Login</a></li>
-            <li><a href="register.html" class="ui-btn">Register</a></li>
+            <li><a href="/app.html" class="ui-btn">Login</a></li>
+            <li><a href="/register.html" class="ui-btn">Register</a></li>
         </ul>
         </div>
     </div>
