added icons and page names

--- a/app.html
+++ b/app.html
@@ -42,9 +42,9 @@
     <div data-role="footer" class="footer">
         <div data-role="navbar">
             <ul>
-                <li><a href="#pageOne" class="ui-btn-active ui-state-persist">page1</a></li>
-                <li><a href="#pageTwo" data-transition="slide">page2</a></li>
-                <li><a href="#pageThree" data-transition="slide" data-direction="reverse">page3</a></li>
+                <li><a href="#pageOne" class="ui-btn-active ui-state-persist">Home</a></li>
+                <li><a href="#pageTwo" data-transition="slide">Statistics</a></li>
+                <li><a href="#pageThree" data-transition="slide" data-direction="reverse">Chat</a></li>
             </ul>
         </div>
     </div>
@@ -68,18 +68,18 @@
 
         <div id="recommended">
             <h2>Recommended Exercises</h2>
-            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext recommendedItem">Search</a>
-            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext recommendedItem">Search</a>
-            <a href="#anylink" class="ui-btn ui-icon-search ui-btn-icon-notext recommendedItem">Search</a>
+            <a href="#anylink" class="ui-btn ui-icon-heart ui-btn-icon-notext recommendedItem">Search</a>
+            <a href="#anylink" class="ui-btn ui-icon-user ui-btn-icon-notext recommendedItem">Search</a>
+            <a href="#anylink" class="ui-btn ui-icon-action ui-btn-icon-notext recommendedItem">Search</a>
         </div>
     </div>
 
     <div data-role="footer" class="footer">
         <div data-role="navbar">
             <ul>
-                <li><a href="#pageOne" data-transition="slide" data-direction="reverse">page1</a></li>
-                <li><a href="#pageTwo" class="ui-btn-active ui-state-persist">page2</a></li>
-                <li><a href="#pageThree" data-transition="slide">page3</a></li>
+                <li><a href="#pageOne" data-transition="slide" data-direction="reverse">Home</a></li>
+                <li><a href="#pageTwo" class="ui-btn-active ui-state-persist">Statistics</a></li>
+                <li><a href="#pageThree" data-transition="slide">Chat</a></li>
             </ul>
         </div>
     </div>
@@ -109,9 +109,9 @@
     <div data-role="footer" class="footer">
         <div data-role="navbar">
             <ul>
-                <li><a href="#pageOne" data-transition="slide">page1</a></li>
-                <li><a href="#pageTwo" data-transition="slide" data-direction="reverse">page2</a></li>
-                <li><a href="#pageThree" class="ui-btn-active ui-state-persist">page3</a></li>
+                <li><a href="#pageOne" data-transition="slide">Overview</a></li>
+                <li><a href="#pageTwo" data-transition="slide" data-direction="reverse">Statistics</a></li>
+                <li><a href="#pageThree" class="ui-btn-active ui-state-persist">Chat</a></li>
             </ul>
         </div>
     </div>
