made chat more intresting

--- a/app.html
+++ b/app.html
@@ -98,7 +98,12 @@
             <br>
             <br>
             <br>
-            <span class="msg-right">How are you doing?</span>
+            <span class="msg-right">How are you?</span>
+            <br>
+            <br>
+            <br>
+            <span class="msg-left">...</span>
+
         </div>
 
         <form name="message" action="" id="chatbox">
