--- a/app.html
+++ b/app.html
@@ -60,10 +60,16 @@
 
         <div id="advice">
             <h2>Advice</h2>
-
-            <p id="adviceText">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-            </p>
+            <ol id="adviceText">
+                <li>                Don't isolate yourself. Spend time with people you can talk to and who make you feel good.
+                </li>
+                <li>                Be smart about online time. Too much time online, especially on social media, can make you feel worse.
+                </li>
+                <li>                Exercise is a natural antidepressant, so move your body frequently—walk, play a sport, or ride your bike
+                </li>
+                <li>                Don't rely on drinking or drugs for a mood boost. They make depression worse.</li>
+                <li>                Get plenty of restful sleep</li>
+            </ol>
         </div>
 
         <div id="recommended">
